# email-report-checker

./: .gitignore  .readthedocs.yaml  Makefile  README.md  README.rst  dmarc.py  pyproject.toml  setup.cfg  test_dmarc.py  test_tls.py  test_util.py  tls.py  util.py
.github/workflows/: ci.yml
docs/: conf.py  email_report_checker.rst  index.rst  install.rst
email_report_checker/: __init__.py  dmarc.py  tls.py  util.py
tests/: test_dmarc.py  test_tls.py  test_util.py
