[metadata]
name = email-report-checker
description = RFC 7489 & 8460 SMTP Report Monitoring Utilities.
long_description = file: README.rst
keywords = hacktoberfest
author = Barnaby Shearer
author_email = b@zi.is
repository = "https://github.com/BarnabyShearer/email-report-checker"
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires = 
python_requires = >=3.7

[options.package_data]
* = py.typed, *.c, *.h

[options.entry_points]
console_scripts = 
    dmarc.py = email_report_checker.dmarc:main
    tls.py = email_report_checker.tls:main

[bdist_wheel]
universal=1
